Fix navbar collapse

--- a/app/components/styles/index.scss
+++ b/app/components/styles/index.scss
@@ -4,6 +4,10 @@ body {
   font-family: 'Roboto', sans-serif;
 }
 
+.navbar li.active a{
+  background-color: transparent !important;
+}
+
 .error {
   color: red;
 }
